# rmcp-actix-web

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md  renovate.json
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh  firewall-allowlist.txt  firewall.sh
.gitlab/ci/: common.gitlab-ci.yml  devcontainer.gitlab-ci.yml  images.gitlab-ci.yml  rust.gitlab-ci.yml  semantic-release.gitlab-ci.yml
examples/: authorization_proxy_example.rs  authorization_proxy_sse_example.rs  composition_sse_example.rs  composition_streamable_http_example.rs  counter_sse.rs  counter_streamable_http.rs  multi_service_example.rs  on_request_hook_example.rs
examples/common/: calculator.rs  counter.rs  generic_service.rs  mod.rs
images/rust/x86_64-unknown-linux-gnu/: Dockerfile
src/: lib.rs
src/transport/: mod.rs  sse_server.rs  streamable_http_server.rs
tests/: test_authorization_forwarding.rs  test_authorization_forwarding_sse.rs  test_on_request_hook.rs  test_scope_composition.rs  test_session_id_not_found.rs  test_with_js.rs  test_with_python.rs
tests/common/: calculator.rs  headers_test_service.rs  mod.rs
tests/snapshots/: test_with_js__js_sse_client_responses.snap  test_with_js__js_streamable_http_client_responses.snap  test_with_python__python_sse_client_responses.snap
tests/test_with_js/: client.js  package-lock.json  streamable_client.js
