[package]
name = "rmcp-actix-web"
version = "0.10.0"
edition = "2024"
description = "actix-web transport implementations for RMCP (Rust Model Context Protocol)"
license = "MIT"
repository = "https://gitlab.com/lx-industries/rmcp-actix-web"
homepage = "https://gitlab.com/lx-industries/rmcp-actix-web"
readme = "README.md"
keywords = ["mcp", "actix", "actix-web", "protocol", "llm"]
categories = ["network-programming", "web-programming"]

[features]
default = ["transport-streamable-http"]
transport-streamable-http = ["rmcp/transport-streamable-http-server"]

# Enable this if your MCP service will forward tokens to upstream APIs (non-compliant).
# This violates MCP specifications but may be necessary for proxy architectures.
# See SECURITY.md for important security implications.
authorization-token-passthrough = []

[dependencies]
rmcp = { version = "0.14.0", features = ["base64", "server"] }
actix-web = { version = "4", default-features = false }
async-stream = "0.3"
bon = "3.7.1"
tokio = { version = "1", features = [
    "sync",
    "macros",
    "rt",
    "time",
    "process",
] }
futures = "0.3"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tokio-stream = "0.1"

[dev-dependencies]
actix-web = "4"
rmcp = { version = "0.14.0", default-features = false, features = [
    "base64",
    "macros",
    "server",
    "transport-streamable-http-server",
] }
anyhow = "1"
reqwest = { version = "0.13", features = ["json", "stream"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
insta = { version = "1.41", features = ["json"] }
http = "1"
